...
    }
    
    var body: some View {
        NavigationStack{
            Form{
                Section(header: Text("Book Details")){
                    TextField("Title Of The Book", text: $viewModel.title)
                    TextField("Author", text: $viewModel.author)
                    TextEditor(text: $viewModel.summary)
                        .frame(height: 150)
                    Picker("Genre",selection: $viewModel.genre){
                        ForEach(Genre.allCases, id:\.self){ genre in
                            Text(genre.rawValue).tag(genre)
...
                }
            }
            .navigationTitle(viewModel.navigationTitle)
            .navigationBarTitleDisplayMode(.inline)
            .toolbar{
                ToolbarItem(placement: .confirmationAction){
                    Button("Save"){
                        viewModel.saveBook()
                        dismiss()
                    }.disabled(viewModel.isNotSavable)
                }
            }
        }
...
